# pyetm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
PyETM/: __init__.py
PyETM/etmclient/: client.py
PyETM/etmclient/core/: Custom.py  Engine.py  HTTPClient.py  Header.py  Scenario.py
PyETM/examples/: PyETMPath.py  __init__.py
examples/: 1.  scenarios.ipynb  1. scenarios.ipynb  2. mapping & regionalisation.ipynb  2. parameters.ipynb  3. hourlyCurves.ipynb  3. myc.ipynb  4. gqueries.ipynb  5. customCurves.ipynb  6. interpolation.ipynb  OLD.ipynb  introduction.ipynb  myc.ipynb
examples/data/: hourly_electricity_curve_mapping.csv  myc.xlsx  myc_model_configuration.xlsx  myc_parameter_upload.xlsx
examples/templates/myc/: study.xlsx  upload.xlsx
pyETM/: __init__.py  ccurves.py  client.py  engine.py  exceptions.py  interpolate.py  logger.py  optional.py  scenario.py  types.py
pyETM/client/: __init__.py  base.py  client.py  customcurves.py  gqueries.py  header.py  interpolate.py  merit.py  meritorder.py  parameters.py  saved.py  savedscenarios.py  scenario.py  session.py  utils.py
pyETM/client/parameters/: __init__.py  input_values.py  sankey.py  scenario_id.py  scenario_parameters.py  user_values.py  util_parameters.py
pyETM/client/utils/: categorisation.py  regionalisation.py
pyETM/clients/: __init__.py  ccurves.py  gqueries.py  header.py  interpolate.py  merit.py  scenario.py
pyETM/clients/ccurves/: __init__.py  curves.py  properties.py
pyETM/clients/curves/: hourly_electricity_curves.py  hourly_electricity_price_curve.py  hourly_heat_curves.py  hourly_household_curves.py  (+2 more)
pyETM/core/: gqueries.py  header.py  interpolate.py  merit.py  scenario.py
pyETM/curves/: __init__.py  hourly_electricity_curves.py  hourly_electricity_price_curve.py  hourly_heat_curves.py  hourly_heat_network_curves.py  hourly_household_curves.py  hourly_household_heat_curves.py  hourly_hydrogen_curves.py  hourly_methane_curves.py  hourly_network_gas_curves.py
pyETM/examples/: introduction.ipynb
pyETM/exchange/: checks.py  market.py  plotting.py  region.py
pyETM/header/: created_at.py
pyETM/httpclient/: __init__.py  context.py  delete.py  get.py  post.py  put.py  response.py
pyETM/myc/: __init__.py  model.py
pyETM/parameters/: __init__.py  application_demands.py  energy_flows.py  flexibility_order.py  heat_network_order.py  input_values.py  scenario_id.py  scenario_parameters.py  user_parameters.py  user_values.py  util_parameters.py
pyETM/profiles/: __init__.py  pecd.py
pyETM/sessions/: __init__.py  aiohttp.py  requests.py
pyETM/utils/: __init__.py  categorisation.py  categorization.py  converter.py  excel.py  interpolation.py  lookup.py  loop.py  profiles.py  regionalisation.py  regionalization.py  regionalizer.py  sql.py  templates.py
src/pyetm/: __init__.py  exceptions.py  logger.py  optional.py  types.py
templates/: categorization.csv
tests/: fixtures.py  test_utils.py
(+157 files in other folders)
