[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyetm"
version = "1.3.6"

description = "Python-ETM Connector"
authors = [{name = "Rob Calon", email = "robcalon@protonmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    'requests>=2.26',
    'pandas>=2.0',
]
keywords = ["ETM", "Energy Transition Model"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

[project.urls]
repository = "https://github.com/robcalon/pyetm"

[project.optional-dependencies]
async = ["aiohttp>=3.8"]
excel = ["xlsxwriter>=3.0", "openpyxl>=3.0"]
dev = [
    "black",
    "mypy>=1.4.1",
    "pre-commit",
    "pre-commit-hooks",
    "pyetm[async, excel]",
    "ruff",
]

[tool.setuptools.package-data]
"pyetm.data" = ["*.csv"]

[tool.pylint]
max-args = 15
max-local = 20

[tool.mypy]
disallow_untypes_defs = true
# disallow_incomplete_defs = true
