[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyetm"
version = "1.4.2"

description = "Python-ETM Connector"
authors = [{name = "Rob Calon", email = "robcalon@protonmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    'requests>=2.26',
    'pandas[parquet]>=2.2',
    'openpyxl>=3.0',
    'xlsxwriter>=3.0',
]
keywords = ["ETM", "Energy Transition Model"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[project.urls]
repository = "https://github.com/robcalon/pyetm"

[project.optional-dependencies]
async = ["aiohttp>=3.8"]
dev = [
    "pre-commit",
    "pre-commit-hooks",
    "pytest",
    "ruff",
]

[tool.setuptools.package-data]
"pyetm.data" = ["*.csv"]

[tool.pylint]
max-args = 15
max-local = 20

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--import-mode=importlib",
]
